...
    <string name="download">Download</string>
    <string name="download_ref_dialog_title">Download Referential</string>
    <string name="download_ref_dialog_content">Are you sure you want to download Referential : %s</string>

    <string name="audit_auditor">Name and Surname : *</string>
    <string name="audit_expertise">Expertise level</string>
    <string name="novice">NOVICE</string>
    <string name="expert">EXPERT</string>
    <string name="create_the_audit">Create the audit</string>
    <!--    create site screen-->
    <string name="create_site_page_title">Add a site </string>
    <string name="mobile_create_site_name">Site name</string>
    <string name="mobile_create_site_address">Site address</string>
    <string name="mobile_create_site_code">Postal code</string>
...
