...
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateTV" />

            <!--        <Button-->
            <!--            android:id="@+id/download_button"-->
            <!--            android:layout_width="wrap_content"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:layout_margin="16dp"-->
            <!--            android:layout_marginEnd="64dp"-->
            <!--            android:background="@drawable/ruleset_info_button"-->
            <!--            android:drawableTop="@drawable/ic_baseline_file_download_white_24"-->
...
